styled the summary

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <h3>Recent Transactions</h3>
 
                     <div id="transactions-list"></div>
-                    <p id>No transactions yet. Add one above</p>
+                    <p >No transactions yet. Add one above</p>
                 </div>
     </div>
 
