--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 </div>
 
                 <button onclick="addTransaction">Add Transaction</button>
+                <button class="delete-button">Delete</button>
             </div>
 
 
